[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcheckx"
version = "0.1.0"
description = "Production-grade health checks for Python apps"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]
